# HOFhack

./: .gitignore  README.md
backend/: .env  app.py  check_db.py  check_file_servers.py  claim_models.py  claim_service.py  claims_api.py  classifier.py  clone_db.py  database.py  diagnose.py  direct_upload_endpoint.py  direct_upload_test.py  email_generator_backend.py  file_storage.py  get_and_process_pdfs.py  insert_sample_claim.py  main-old.py  main.py  pinecone-db.py  process_pdf_embeddings.py  process_specific_files.py  pyproject.toml  railway.toml  requirement.txt  requirements.txt  run_api.py  run_files_test.py  run_process.sh  run_servers.py  submit_claim_to_provider.py  upload_using_direct_endpoint.py
backend/classes/: embeddings.py
clinical_bert/: app.py  requirements.txt
frontend/: middleware.ts  middleware.ts.bak  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: page.tsx
frontend/app/(dashboard)/claims/: loading.tsx
frontend/app/dashboard/: loading.tsx  page.tsx
frontend/app/dashboard/claims/: page.tsx
frontend/app/dashboard/help/: page.tsx
frontend/app/help/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/claims/: claim-MH-2025-4952.json  claim-MH-2025-6691.json  claim-MH-2025-8105.json  claim-MH-2025-8602.json  claim-MH-2025-9007.json
frontend/components/: dashboard-shell.tsx
frontend/components/ui/: file-upload.tsx
frontend/lib/: api.ts  auth0.js  mongodb.ts
frontend/scripts/: upload-pdfs.js
(+9 files in other folders)
