[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Soham Bhattacharya <sohamb117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
flask = "2.3.3"
pypdf2 = "3.0.1"
python-dotenv = "1.1.0"
requests = "2.31.0"
werkzeug = "2.3.7"
fastapi = "0.115.12"
uvicorn = "0.34.1"
python-multipart = "0.0.6"
pydantic = "2.7.4"
pandas = "2.1.1"
langchain = "0.3.23"
langchain-openai = "0.3.14"
openai = "1.75.0"
pinecone = "^6.0.2"
langchain-community = "^0.3.21"
langchain-pinecone = "^0.2.5"
langchain-deepseek = "^0.1.3"
langchain-jina = "^0.0.1.dev0"
dnspython = "2.3.0"
pymongo = {version = "4.3.3", extras = ["srv"]}
motor = "3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
